--- a/.github/workflows/frontend-pipeline.yml
+++ b/.github/workflows/frontend-pipeline.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 20.x
+        node-version: 22.x
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4.1.0
@@ -29,7 +29,7 @@ jobs:
 
     - name: Installing Dependencies
       run: |
-        npm install
+        npm install --legacy-peer-deps
 
     - name: Building the Application
       run: |
